--- a/source/bmflash.rc
+++ b/source/bmflash.rc
@@ -20,6 +20,7 @@
 
 #include <windows.h>
 #include <winver.h>
+#include "svnrev.h"
 
 AppIcon ICON "res/icon_download.ico"
 
@@ -29,9 +30,9 @@ AppIcon ICON "res/icon_download.ico"
  *  for details on version information and the VERSIONINFO structure.
  */
 #define VERSION              1
-#define REVISION             0
-#define BUILD                0
-#define VERSIONSTR           "1.0.0\0"
+#define REVISION             1
+#define BUILD                SVNREV_NUM
+#define VERSIONSTR           "1.0.*\0"
 #define VERSIONNAME          "bmflash.exe\0"
 #define VERSIONDESCRIPTION   "Flash programming tool\0"
 #define VERSIONCOMPANYNAME   "CompuPhase\0"
